1999-08-12  Leif Hedstrom  <leif@netscape.com>

	* Entry.pm (move): Changed name, was rename(), is now move().

1999-08-10  Leif Hedstrom  <leif@netscape.com>

	* Entry.pm (setValues): Renamed, used to be setValue(), which is
	now an alias to setValues().
	(getValues): New method, to get the array of values.
	(STORE): Fixed tests around DN handling, making sure it's not
	treated as an array. I also optimized a couple of tests, since we
	now filter out "DN" earlier in the funtion(s).
	(attrModified): Ditto.
	(attrClean): Ditto.
	(unRemove): Ditto.
	(removeValue): Ditto.
	(addValue): Ditto.

1999-08-08  Leif Hedstrom  <leif@netscape.com> and Kevin McCarthy

	* Entry.pm (setValue): Remove _delete_ flag, if set.

	* Conn.pm (close): Fixed memory leak, moved code from the DESTROY
	method over here.
	(DESTROY): Call the close() method.
	(getErrorCode): We now return LDAP_SUCCESS if there is no LDAP
	connection handle.
	(getErrorString): Ditto.

	* Entry.pm (STORE): Bug fix for large attribute sets.
	(attrModified): Ditto.
	(removeValue): Ditto.
	(addValue): Ditto.
	(EXISTS): Fix for bug 4368, cleaning up the code, and avoid the
	double calls.

1999-08-06  Leif Hedstrom  <leif@netscape.com> and Kevin McCarthy 

	* API.xs: Added some more tests around free() statements. These
	are most likely never triggered, but better safe than sorrow (and
	the overhead of testing this is insignificant).

	* Conn.pm (browse): Added this function, to make it easy to browse
	an entry.
	(compare): Compare an attribute value against a DN/entry, without
	having to do the search.

	* Entry.pm (removeValue): Fixed loop bug.
	(addValue): Ditto.
	(hasValue): Ditto.
	(matchValue): Fixed loop bug, and also missing normalization in
	half of the case statement.
	(rename): Added this new method, to rename attributes.
	(copy): Added, to copy attributes.

	* Merged v1.2.3 with v1.3 branch.

1999-08-06  Kevin McCarthy  <kmccarth@perldap.org>

	* Entry.pm (addDNValue): Bug fix, index for norm was wrong.
